use list.of instead of singletonList